fix navbar z-index

--- a/src/scss/sections/_navbar.scss
+++ b/src/scss/sections/_navbar.scss
@@ -71,6 +71,7 @@
 
       &.opened {
         display: block;
+        z-index: 1000;
       }
 
       &-item {
